# methodproof-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_windows_compat.py
.github/workflows/: ci.yml
methodproof/: __init__.py  __main__.py  _daemon.py  analysis.py  binding.py  bip39.py  bridge.py  cli.py  config.py  crypto.py  e2e.py  graph.py  hook.py  integrity.py  kdf.py  keychain.py  live.py  lock.py  mcp.py  migrate_db.py  proxy.py  proxy_daemon.py  repos.py  store.py  sync.py  viewer.py  wordlist.py
methodproof/agents/: base.py  music.py  terminal.py  watcher.py
methodproof/hooks/: claude_code.py  claude_code.sh  cline_hook.sh  codex_hook.sh  gemini_hook.sh  install.py  kiro_hook.sh  mcp_register.py  model_cache.py  openclaw_install.py  opencode_plugin.js  wrappers.py
methodproof/hooks/openclaw/: HOOK.md  handler.ts
methodproof/skills/methodproof/: SKILL.md
methodproof/tui/: __init__.py  consent.py  init.py  log.py  login_success.py  review.py  start.py  status.py  theme.py
tests/: conftest.py  test_analysis.py  test_cli_auth.py  test_cli_config.py  test_cli_helpers.py  test_cli_session.py  test_cli_share.py  test_cli_start.py  test_cli_update.py  test_e2e_integration.py  test_graph.py  test_hooks.py  test_live.py  test_model_cache.py  test_openclaw_hooks.py  test_profiles.py  test_repos.py  test_security.py  test_store.py  test_sync.py  test_viewer.py  test_watcher_ignore.py  test_wrappers.py
