[project]
name = "methodproof"
version = "0.7.31"
description = "See how you code. Capture and visualize your engineering process."
requires-python = ">=3.11"
dependencies = ["watchdog>=4.0", "websocket-client>=1.7", "cryptography>=43.0", "keyring>=25.0", "textual>=0.59", "rich>=13.7"]
license = "Apache-2.0"
readme = "README.md"

[project.optional-dependencies]
proxy = ["mitmproxy>=10.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
methodproof = "methodproof.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["methodproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: requires Docker infrastructure (just infra-up && just seed && just platform)",
]

[tool.coverage.run]
source = ["methodproof"]
omit = ["methodproof/wordlist.py"]

[tool.coverage.report]
show_missing = true
